hphp/test/slow/protected_internal/static_property_narrower_override_2.php.expectf
Fatal error: Access level to B::$foo must be public (as in class A) or weaker in %s on line 9
